fix(overview): aligned sidebar items correctly

--- a/src/app/pages/overview/overview-view.component.scss
+++ b/src/app/pages/overview/overview-view.component.scss
@@ -5,7 +5,7 @@
   }
 
   .sidebar {
-    @apply grid gap-4 md:grid-cols-2 xl:grid-cols-1 mxl:row-start-2;
+    @apply grid gap-4 md:grid-cols-2 xl:grid-cols-1 mxl:row-start-2 items-center;
   }
 
   .hours {
